[FIX] contrast issue with blockquote in the amelia theme

--- a/themes/amelia/css/amelia.css
+++ b/themes/amelia/css/amelia.css
@@ -6885,7 +6885,7 @@ input[type="checkbox"].preffilter-toggle-round:checked + label:before {
     min-height: 5.5em; } }
 
 blockquote {
-  color: #7a7a7a;
+  color: #e5e5e5;
   border-left: 0.25rem solid #e5e5e5; }
 
 body.fullscreen {
